<resources>
    <string name="app_name">Tweek Labs Task</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_my_kits">My Kits</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_account">Account</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>