<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_my_kits"
        android:icon="@drawable/ic_my_kits"
        android:title="@string/title_my_kits" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>